# Physics-Sim

./: .gitignore  CMakeLists.txt
include/core/: concepts.hpp
include/math/: vec2.hpp
scripts/: build.sh  run.sh
src/app/: main.cpp
tests/: test_vec2.cpp
